aprimoramentos e correção de problemas

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -108,10 +108,12 @@
 <body>
 
     <header class="header">
+        <i class='bx bx-menu' id="menu-icon"></i>
+
         <a href="../index.html" class="logo">
             <img src="../img/marca dagua 2 copia logo.png" alt="Logo Yuri Barbosa" class="main-logo">
         </a>
-        <div id="menu-icon" class="bx bx-menu"></div>
+        
         <nav class="navbar">
             <a href="../index.html#home">Início</a>
             <a href="../index.html#about">Sobre Mim</a>
@@ -308,6 +310,6 @@
             }
         });
     </script>
-    <script src="../script.js"></script>
+    <script src="../script.js"></script> <script src="admin.js"></script> </body>
 </body>
 </html>
