--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
 <body>
 
     <header class="header">
-    <a href="#" class="logo">
-        <img src="img/marca dagua 2 copia logo.png" alt="Logo Yuri Barbosa" class="main-logo">
-    </a>
+    <i class='bx bx-menu' id="menu-icon"></i>
 
-    <div id="menu-icon" class="bx bx-menu"></div>
+    <a href="#" class="logo">
+        <img src="img/marca dagua 2 copia logo.png" alt="Yuri Barbosa" class="main-logo">
+        </a>
+
     <nav class="navbar">
         <a href="#home" class="active">Início</a>
         <a href="#about">Sobre Mim</a>
         <a href="#skills">Habilidades</a>
         <a href="#portfolio">Portfólio</a>
         <a href="#contact">Contato</a>
-        <a href="blog/index.html" class="navbar-link">Blog</a> </nav>
-        <a href="admin/login.html" class="nav-link" title="Administração do Blog">
-            <i class='bx bx-cog'></i> </a>
-    <div id="theme-toggle" class="bx bx-moon"></div>
+        <a href="blog/index.html">Blog</a>
+        <a href="admin/admin.html" class="nav-link"><i class='bx bx-cog'></i></a>
+    </nav>
+
+    <i class='bx bx-moon' id="theme-toggle"></i>
 </header>
 
     <section class="home" id="home">
