atualização de cores e inclusão de top button

--- a/index.html
+++ b/index.html
@@ -338,6 +338,10 @@
 
     <hr class="footer-divider">
 
+    <a href="#home" id="scrollToTopBtn" class="scroll-to-top-btn" title="Voltar ao Topo">
+            <i class='bx bx-arrow-to-top'></i>
+        </a>
+
     <div class="footer-copyright">
         <p>Copyright &copy; 2025 by Yuri Barbosa | All Rights Reserved.</p>
     </div>
