atualização foto seção sobre mim

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="about-container">
             <div class="about-image">
-                <img src="img/yuri_perfil.png" alt="Foto de Perfil de Yuri Barbosa na Seção Sobre Mim">
+                <img src="img/FOTO PERFIL.jpg" alt="Foto de Perfil de Yuri Barbosa na Seção Sobre Mim">
                 
             </div>
             <div class="about-content">
