atualização de fotos

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
              data-project-link="https://yuriletras.github.io/yuribarbosa/"
              data-project-repo="https://github.com/yuriletras/yuribarbosa"
              data-project-techs="HTML, CSS, JavaScript"
-             data-project-img1="./img/meus_projetos.png" data-project-img2="./img/tela_de_inicio.png" data-project-img3="./img/menu_mobile.png" data-project-detailed-report="Este é um relatório muito mais detalhado sobre o meu portfólio pessoal. Ele aborda o processo de design (UI/UX), as decisões técnicas para o desenvolvimento responsivo e a otimização de performance. Descreve a estrutura modular do código, a integração do modo claro/escuro e a lógica por trás da apresentação dinâmica dos projetos. O objetivo principal foi criar uma experiência de usuário intuitiva e visualmente atraente, que reflita minhas habilidades em desenvolvimento frontend e design."
+             data-project-img1="./img/meus_projetos.PNG" data-project-img2="./img/tela_de_inicio.PNG" data-project-img3="./img/menu_mobile.PNG" data-project-detailed-report="Este é um relatório muito mais detalhado sobre o meu portfólio pessoal. Ele aborda o processo de design (UI/UX), as decisões técnicas para o desenvolvimento responsivo e a otimização de performance. Descreve a estrutura modular do código, a integração do modo claro/escuro e a lógica por trás da apresentação dinâmica dos projetos. O objetivo principal foi criar uma experiência de usuário intuitiva e visualmente atraente, que reflita minhas habilidades em desenvolvimento frontend e design."
         >
             <img src="./img/portfolio1.PNG" alt="Miniatura do Projeto de Portfólio">
             <div class="portfolio-layer">
@@ -176,7 +176,7 @@
              data-project-link="#"
              data-project-repo="https://github.com/yuriletras/projeto-backend-tasks"
              data-project-techs="HTML, CSS, JavaScript, Node.js, Express, MongoDB"
-             data-project-img1="./img/ytasks.png" data-project-img2="./img/ytask.png" data-project-img3="./img/ytas.png" data-project-detailed-report="O YB Tasks é um sistema web full-stack desenvolvido para gerenciamento de tarefas, com foco em autenticação segura e usabilidade. Ele utiliza Node.js com Express.js no backend para uma API RESTful robusta, e MongoDB para armazenamento de dados de usuários e tarefas. No frontend, HTML, CSS e JavaScript foram empregados para criar uma interface intuitiva e responsiva. O projeto demonstra a capacidade de construir aplicações completas, desde a camada de apresentação até o banco de dados, incluindo funcionalidades de CRUD (Criação, Leitura, Atualização, Exclusão) e controle de acesso via login de usuário."
+             data-project-img1="./img/ytasks.PNG" data-project-img2="./img/ytask.PNG" data-project-img3="./img/ytas.PNG" data-project-detailed-report="O YB Tasks é um sistema web full-stack desenvolvido para gerenciamento de tarefas, com foco em autenticação segura e usabilidade. Ele utiliza Node.js com Express.js no backend para uma API RESTful robusta, e MongoDB para armazenamento de dados de usuários e tarefas. No frontend, HTML, CSS e JavaScript foram empregados para criar uma interface intuitiva e responsiva. O projeto demonstra a capacidade de construir aplicações completas, desde a camada de apresentação até o banco de dados, incluindo funcionalidades de CRUD (Criação, Leitura, Atualização, Exclusão) e controle de acesso via login de usuário."
         >
             <img src="img/projeto 2.PNG" alt="Miniatura do Projeto YB Tasks">
             <div class="portfolio-layer">
