--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <p>Sou um Desenvolvedor Full Stack com experiência na construção de aplicações web completas, do design da interface à lógica de servidor e integração com APIs. Minha paixão é transformar ideias em soluções digitais robustas e intuitivas, combinando um forte domínio em desenvolvimento front-end com a capacidade de criar e gerenciar sistemas de back-end eficientes.</p>
 
             <div class="social-media">
-                <a href="http://www.linkedin.com/in/yuri-basi"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://github.com/yuriletras/yuriletras"><i class='bx bxl-github'></i></a>
+                <a href="http://www.linkedin.com/in/yuri-basi" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/yuriletras/yuriletras"target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-youtube'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
                 
@@ -274,8 +274,8 @@
         <div class="footer-right-content">
             <h3 class="footer-social-heading">SOCIAL</h3>
             <div class="footer-social-links">
-                <a href="http://www.linkedin.com/in/yuri-basi"_blank"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://github.com/yuriletras/yuriletras" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="http://www.linkedin.com/in/yuri-basi" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/yuriletras/yuriletras" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 <a href="URL_DO_SEU_TWITTER" target="_blank"><i class='bx bxl-youtube'></i></a>
                 <a href="URL_DO_SEU_YOUTUBE" target="_blank"><i class='bx bxl-instagram'></i></a>
                 </div>
