atualização da seção portfolio

--- a/index.html
+++ b/index.html
@@ -201,24 +201,23 @@
             </div>
         </div>
 
-        <div class="portfolio-box"
-             data-project-img="img/project3.png"
-             data-project-title="UI/UX Design - Projeto 3"
-             data-project-description="Esta é uma descrição mais detalhada do Projeto 3, mostrando os desafios de UI/UX e as soluções implementadas."
+       <div class="portfolio-box"
+             data-project-img="img/estudiobloss3.jpg"
+             data-project-title="estúdio bloss"
+             data-project-description="Esta é uma descrição mais detalhada do Projeto 3, mostrando os desafios e as soluções implementadas."
              data-project-link="#"
-             data-project-repo="#"
-             data-project-techs="Figma, Photoshop, Illustrator"
-             data-project-img1="./img/project3_wireframe.png" data-project-img2="./img/project3_mockup.png"   data-project-img3="" data-project-detailed-report="O Projeto 3 focou em um estudo de caso completo de UI/UX para [Nome do Cliente/App]. O processo iniciou com pesquisa de usuário e análise de concorrentes, seguindo para a criação de wireframes no Figma. O design de interface foi iterativo, com foco na usabilidade, acessibilidade e na experiência do usuário. O relatório detalha os desafios de fluxo de usuário, as soluções de design implementadas e os resultados esperados em termos de engajamento e satisfação do usuário. Ferramentas como Photoshop e Illustrator foram utilizadas para a criação de ativos visuais e refinamento do design."
+             data-project-repo="https://github.com/yuriletras/estudiobloss"
+             data-project-techs="HTML, CSS, JavaScript" data-project-img1="./img/estudiobloss1.jpg"
+             data-project-img2="./img/estudiobloss2.jpg"
+             data-project-img3=""
+             data-project-detailed-report="Como desenvolvedor web, fui responsável pela criação e otimização do website institucional para Estúdio Bloss. O projeto envolveu o desenvolvimento de uma interface moderna e responsiva, garantindo uma navegação intuitiva em diversos dispositivos. Um dos principais desafios foi a implementação de um sistema de tradução multi-idioma (Português/Inglês) robusto, que incluía a manipulação dinâmica de conteúdo, como textos e URLs, sem comprometer a integridade dos elementos visuais, como a imagem de logo no footer. Além disso, integrei funcionalidades de comunicação direta, como links para WhatsApp, para aprimorar a interação do usuário. Todo o trabalho foi desenvolvido utilizando HTML5 para a estruturação semântica, CSS3 para o design e layout responsivo, e JavaScript puro para a lógica de interatividade e tradução, focando em performance e manutenibilidade do código."
         >
-            <img src="img/project3.png" alt="Miniatura do Projeto UI/UX Design">
+            <img src="img/estudiobloss.JPG" alt="Miniatura do Projeto UI/UX Design">
             <div class="portfolio-layer">
-                <h4>UI/UX Design</h4>
-                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+                <h4>estúdio bloss</h4>
+                <p>Desenvolvi e otimizei o website institucional para Estúdio Bloss, com foco em uma experiência de usuário responsiva e intuitiva. Implementei funcionalidades de tradução multi-idioma e integração com WhatsApp, utilizando HTML5, CSS3 e JavaScript puro para uma performance robusta.</p>
                 <div class="project-techs">
-                    <span class="tech-tag">Figma</span>
-                    <span class="tech-tag">Photoshop</span>
-                    <span class="tech-tag">Illustrator</span>
-                </div>
+                    <span class="tech-tag">HTML</span> <span class="tech-tag">CSS</span> <span class="tech-tag">JavaScript</span> </div>
                 <div class="project-links">
                     <a href="#" target="_blank" class="portfolio-btn project-link">
                         <i class='bx bx-link-external'></i> Acessar projeto
@@ -228,6 +227,7 @@
                     </a>
                 </div>
             </div>
+</div>
         </div>
     </div>
     <div class="portfolio-button-container">
