correções de formato

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
              data-project-description="Esta é uma descrição mais detalhada do Projeto 3, mostrando os desafios e as soluções implementadas."
              data-project-link="#"
              data-project-repo="https://github.com/yuriletras/estudiobloss"
-             data-project-techs="HTML, CSS, JavaScript" data-project-img1="./img/estudiobloss1.JPG"
+             data-project-techs="HTML, CSS, JavaScript" data-project-img1="img/estudiobloss1.JPG"
              data-project-img2="./img/estudiobloss2.JPG"
-             data-project-img3="./img/estudiobloss3.JPG"
+             data-project-img3="img/estudiobloss3.JPG"
              data-project-detailed-report="Como desenvolvedor web, fui responsável pela criação e otimização do website institucional para Estúdio Bloss. O projeto envolveu o desenvolvimento de uma interface moderna e responsiva, garantindo uma navegação intuitiva em diversos dispositivos. Um dos principais desafios foi a implementação de um sistema de tradução multi-idioma (Português/Inglês) robusto, que incluía a manipulação dinâmica de conteúdo, como textos e URLs, sem comprometer a integridade dos elementos visuais, como a imagem de logo no footer. Além disso, integrei funcionalidades de comunicação direta, como links para WhatsApp, para aprimorar a interação do usuário. Todo o trabalho foi desenvolvido utilizando HTML5 para a estruturação semântica, CSS3 para o design e layout responsivo, e JavaScript puro para a lógica de interatividade e tradução, focando em performance e manutenibilidade do código."
         >
             <img src="img/estudiobloss.JPG" alt="Miniatura do Projeto UI/UX Design">
